environment broken by shadCN, need fix

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@
 #demoInp {
 	background: var(--maincolor);
 	padding: 0.75em;
-	width: min-content;
+	width: 25%;
 	height: min-content;
 	border-radius: 10px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
