--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,14 @@
 :root {
-	--maincolor: rgba(0, 0, 0, 0.377);
+	--darkcolor: rgba(0, 0, 0, 0.377);
+	--lightcolor: rgb(255, 255, 255);
+	font-size: 16px;
 }
 
 #root {
-	width: 100vw;
 	padding: 3% 10% 0%;
 	display: flex;
-	gap: 0.25em;
+	gap: 0.75em;
+	color: rgb(226, 222, 222);
 }
 
 #optionsModal {
@@ -17,10 +19,10 @@
 	align-items: center;
 	width: min-content;
 	height: fit-content;
-	font-size: 14px;
-	background: var(--maincolor);
-	border-radius: 10px;
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	font-size: 0.65rem;
+	background: var(--darkcolor);
+	border-radius: 0.625rem;
+	box-shadow: rgba(0, 0, 0, 0.16) 0rem 0.1875rem 0.375rem, rgba(0, 0, 0, 0.23) 0rem 0.1875rem 0.375rem;
 }
 
 #optionsModal button {
@@ -32,17 +34,17 @@
 }
 
 #optionsModal button:nth-child(1) {
-	border-top-right-radius: 15px;
-	border-top-left-radius: 15px;
+	border-top-right-radius: 0.625rem;
+	border-top-left-radius: 0.625rem;
 }
 
 #optionsModal button:nth-child(2) {
-	border-bottom-right-radius: 15px;
-	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 0.625rem;
+	border-bottom-left-radius: 0.625rem;
 }
 
 #optionsModal span {
-	margin: 0.5em;
+	margin: 0.75rem;
 }
 
 #optionsModal img {
@@ -51,11 +53,111 @@
 	margin: 0 auto 0.75em;
 }
 
-#demoInp {
-	background: var(--maincolor);
+#contentCont {
+	display: flex;
+	flex-direction: column;
+	gap: 0.75em;
+	min-width: 30rem;
+	max-width: 40rem;
+}
+
+#demoInp,
+#eduInfo,
+#workInfo {
+	background: var(--darkcolor);
 	padding: 0.75em;
-	width: 25%;
 	height: min-content;
 	border-radius: 10px;
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0rem 0.1875rem 0.375rem, rgba(0, 0, 0, 0.23) 0rem 0.1875rem 0.375rem;
+}
+
+#demoInp div:first-child,
+#eduInfo div:first-child,
+#workInfo div:first-child {
+	margin-bottom: 0.5em;
+}
+
+.inputStyle {
+	background-color: rgba(66, 66, 66, 0.705);
+	border: none;
+	height: 1.85rem;
+	font-size: 1rem;
+	border-radius: 0.375em;
+	padding-left: 0.35em;
+	margin: 0 0 0.5em;
+}
+
+#textAreaStyle {
+	background-color: rgba(66, 66, 66, 0.705);
+	min-height: min-content;
+	border: none;
+	font-size: 1rem;
+	border-radius: 0.375em;
+	padding-left: 0.35em;
+	padding-top: 0.35em;
+	margin: 0 0 0.5em;
+}
+
+.infoInputs {
+	display: flex;
+	flex-direction: column;
+}
+
+#contentCont img {
+	content: url("./assets/arrow-down-white.svg");
+}
+
+#resumeDiv {
+	background-color: whitesmoke;
+	color: black;
+	min-width: 60rem;
+	width: 60rem;
+	height: 80rem;
+	min-height: fit-content;
+	margin-top: 0.25rem;
+	box-shadow: rgba(0, 0, 0, 0.16) 0rem 0.1875rem 0.375rem, rgba(0, 0, 0, 0.23) 0rem 0.1875rem 0.375rem;
+}
+
+@media (prefers-color-scheme: light) {
+	body {
+		background-color: rgb(179, 179, 192);
+	}
+
+	#root {
+		color: black;
+	}
+
+	#resumeDiv {
+		background-color: var(--lightcolor);
+	}
+
+	#optionsModal {
+		background: var(--lightcolor);
+	}
+
+	#optionsModal img {
+		filter: invert(0%) sepia(0%) saturate(7499%) hue-rotate(100deg) brightness(100%) contrast(101%);
+	}
+
+	#demoInp,
+	#eduInfo,
+	#workInfo {
+		background: var(--lightcolor);
+	}
+
+	.inputStyle {
+		background-color: rgba(179, 179, 192, 0.404);
+	}
+
+	#textAreaStyle {
+		background-color: rgba(179, 179, 192, 0.404);
+	}
+
+	#contentCont img {
+		content: url("./assets/arrow-down-black.svg");
+	}
+
+	button:hover {
+		border-color: rgb(179, 179, 192);
+	}
 }
