--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,18 +2,31 @@
 	--darkcolor: rgb(44, 44, 44);
 	--lightcolor: rgb(255, 255, 255);
 	font-size: 16px;
+	scroll-behavior: smooth;
 }
 
 body {
-	/* background-color: rgb(44, 44, 44); */
 	background-color: rgb(23, 23, 39);
 }
 
 #root {
-	padding: 1.5% 10% 0%;
+	padding: 1% 15% 0%;
 	display: flex;
-	gap: 1.5em;
+	gap: 1em;
 	color: rgb(226, 222, 222);
+}
+
+.toolBtns {
+	border: 1px solid transparent;
+	font-size: 1em;
+	font-weight: 500;
+	font-family: inherit;
+	cursor: pointer;
+	transition: border-color 0.25s;
+}
+
+.toolBtns:hover {
+	border-color: #ffffff96;
 }
 
 #optionsModal {
@@ -61,7 +74,7 @@ body {
 #contentCont {
 	display: flex;
 	flex-direction: column;
-	gap: 0.75em;
+	gap: 1em;
 	min-width: 30rem;
 	max-width: 40rem;
 }
@@ -76,9 +89,20 @@ body {
 	box-shadow: rgba(0, 0, 0, 0.16) 0rem 0.1875rem 0.375rem, rgba(0, 0, 0, 0.23) 0rem 0.1875rem 0.375rem;
 }
 
-#demoInp div:first-child,
-#eduInfo div:first-child,
-#workInfo div:first-child {
+.shrink > button,
+.shrink > div:not(:first-child),
+.shrink form {
+	transition: display 1s;
+	display: none;
+}
+
+#expList div:not(:last-child) {
+	border-bottom: solid rgba(66, 66, 66, 0.705) 2px;
+}
+
+#demoInp > div:first-child,
+#eduInputHeader,
+#workInfo > div:first-child {
 	margin-bottom: 0.5em;
 }
 
@@ -90,6 +114,10 @@ body {
 	border-radius: 0.375em;
 	padding-left: 0.35em;
 	margin: 0 0 0.5em;
+}
+
+.inputStyle:invalid {
+	color: red;
 }
 
 #textAreaStyle {
@@ -108,21 +136,34 @@ body {
 	flex-direction: column;
 }
 
-#contentCont img {
-	content: url("./assets/arrow-down-white.svg");
+.arrow {
+	content: url("../assets/arrow-down-white.svg");
+	transition: transform 0.5s;
+	transform: rotate(180deg);
 }
 
-#resumeDiv {
-	background-color: whitesmoke;
+.flipArrow {
+	transform: rotate(0deg);
+}
+
+button {
+	cursor: pointer;
+}
+
+.inputBtn {
+	transition: background-color 0.5s, color 0.5s;
+}
+
+.inputBtn:hover {
+	background-color: whitesmoke !important;
 	color: black;
-	min-width: 60rem;
-	width: 60rem;
-	height: 80rem;
-	min-height: fit-content;
-	margin-top: 0.25rem;
-	box-shadow: rgba(0, 0, 0, 0.16) 0rem 0.1875rem 0.375rem, rgba(0, 0, 0, 0.23) 0rem 0.1875rem 0.375rem;
 }
 
+/* 
+
+Light Theme
+
+*/
 @media (prefers-color-scheme: light) {
 	body {
 		background-color: rgb(179, 179, 192);
@@ -130,6 +171,7 @@ body {
 
 	#root {
 		color: black;
+		transition: display 1s;
 	}
 
 	#resumeDiv {
@@ -158,11 +200,21 @@ body {
 		background-color: rgba(179, 179, 192, 0.404);
 	}
 
-	#contentCont img {
-		content: url("./assets/arrow-down-black.svg");
+	#eduList div:not(:last-child) {
+		border-bottom: solid rgba(179, 179, 192, 0.404) 2px;
 	}
 
-	button:hover {
-		border-color: black;
+	.inputBtn {
+		color: white;
+	}
+
+	.arrow {
+		content: url("../assets/arrow-down-black.svg");
+	}
+
+	.inputBtn:hover {
+		background-color: rgba(179, 179, 192, 0.404) !important;
+		color: black !important;
+		transition: background-color 0.5s, color 0.5s;
 	}
 }
